Fix missing space between footnotes' paragraphs
ref #2023

--- a/eruditorg/static/sass/components/article/_notes.scss
+++ b/eruditorg/static/sass/components/article/_notes.scss
@@ -31,6 +31,15 @@
 
   .note {
     margin-bottom: 0.5em;
+
+   .alinea {
+      margin-top: 0.5em;
+
+      &:nth-of-type(1) {
+        display: inline;
+      }
+    }
+
   }
 
 }
